# inmet-fetcher

./: .gitignore  README.md  fetch.py  pyproject.toml
src/: inmet_bdmep.py
src/inmet_bdmep/: __init__.py  cli.py  fetch.py  fetcher.py  reader.py
src/inmet_fetcher/: __init__.py  cli.py  fetch.py  plugin.py  reader.py  schema.py  storage.py  writer.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_reader.py  test_schema.py  test_utils.py
